# orbtk

./: .gitignore  CHANGELOG.md  Cargo.toml  Node.toml  README.md
_old/crates/localization/: mod.rs
_old/crates/tree/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: combo_box.rs  font_icon_block.rs  lib.rs  tab_widget.rs  toggle_button.rs  window.rs
crates/widgets/src/themes/: mod.rs
crates/widgets/src/themes/default/: fonts.rs  mod.rs
crates/widgets/src/themes/fluent/: fonts.rs  mod.rs
crates/widgets/src/themes/redox/: mod.rs
examples/: 0_gallery.rs
manual/src/getting_started/: create_project.md
orbtk/: Cargo.toml
orbtk/examples/: 0_gallery.rs  1_hello_world.rs  2_counter.rs  3_calculator.rs  README.md
orbtk/src/: lib.rs  prelude.rs
orbtk_api/: Cargo.toml
orbtk_api/src/: lib.rs  macros.rs  prelude.rs  tree.rs
orbtk_api/src/application/: context_provider.rs  mod.rs  overlay.rs  window_adapter.rs
orbtk_api/src/events/: event_adapter.rs  event_handler.rs  mod.rs  system.rs  text_input.rs
orbtk_api/src/events/key_event/: key.rs  key_handlers.rs  mod.rs
orbtk_api/src/events/mouse_event/: mod.rs  mouse_button.rs
orbtk_api/src/localization/: mod.rs
orbtk_api/src/localization/ron_localization/: mod.rs
orbtk_api/src/services/: application.rs  keyboard.rs  localization_manager.rs  mod.rs  theme_manager.rs
orbtk_api/src/theming/: mod.rs  style.rs  theme.rs
orbtk_api/src/theming/config/: style_config.rs
orbtk_api/src/widget_base/: build_context.rs  context.rs  message_adapter.rs  mod.rs  template.rs  widget_container.rs
orbtk_base/: Cargo.toml
orbtk_base/src/: lib.rs  macros.rs
orbtk_base/src/events/: drop.rs  editable.rs  event_adapter.rs  focus.rs  key.rs  mod.rs  mouse.rs  system.rs  text_input.rs  window.rs
orbtk_base/src/events/key_event/: mod.rs  scan_codes.rs
orbtk_base/src/layout/: absolute.rs
orbtk_base/src/localization/: dictionary.rs  mod.rs
orbtk_base/src/shell/: mod.rs
orbtk_base/src/systems/: cleanup_system.rs  event_state_system.rs  init_system.rs
orbtk_base/src/theming/: mod.rs  style.rs  theme.rs
orbtk_base/src/theming/config/: style_config.rs
orbtk_base/src/tree/: mod.rs
orbtk_base/src/utils/: mod.rs
orbtk_base/src/widget_base/: build_context.rs  context.rs  message_adapter.rs  widget_container.rs
orbtk_orbclient/: Cargo.toml
orbtk_orbclient/src/: app.rs  error.rs  lib.rs  window.rs
orbtk_proc_macros/: Cargo.toml
orbtk_render/: Cargo.toml
orbtk_render/src/: common.rs  lib.rs  render_context_2d.rs
orbtk_shell/: Cargo.toml
orbtk_shell/src/: lib.rs
orbtk_shell/src/systems/: cleanup_system.rs  event_state_system.rs  init_system.rs  layout_system.rs  post_layout_state_system.rs  render_system.rs
orbtk_shell_old/: Cargo.toml  README.md
orbtk_shell_old/src/: lib.rs
orbtk_tinyskia/: Cargo.toml
orbtk_tinyskia/src/: common.rs  font.rs  font_config.rs  lib.rs  render_config.rs  render_context_2d.rs  render_pipeline.rs  render_target.rs  text_metrics.rs
orbtk_utils/src/: point.rs  size.rs
orbtk_widgets/: Cargo.toml
orbtk_widgets/src/: button.rs  check_box.rs  combo_box.rs  cursor.rs  grid.rs  items_widget.rs  lib.rs  list_view.rs  master_detail.rs  numeric_box.rs  pager.rs  password_box.rs  progress_bar.rs  scroll_indicator.rs  slider.rs  switch.rs  tab_widget.rs  text_block.rs  text_box.rs  toggle_button.rs  window.rs
orbtk_widgets/src/behaviors/: text_behavior.rs
orbtk_widgets/src/themes/default/: mod.rs
orbtk_widgets/src/themes/fluent/: mod.rs
orbtk_widgets/src/themes/redox/: mod.rs
src/: lib.rs  prelude.rs
