[package]
name = "orbtk_api"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "API crate that provides base api and elements for OrbTk like widgets basis."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ui", "api"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
smallvec = { version = "1", default-features = false }
ron = "0.6"
memchr = "2"
dirs-next = "2.0"
derive_more = { version = "0.99", default-features = false, features = ["constructor"] }

# orbtk
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }
orbtk_localization = { path = "../orbtk_localization", version = "0.3.1-alpha4" }
orbtk_proc_macros = { path = "../orbtk_proc_macros", version = "0.3.1-alpha4" }
orbtk_utils = { path = "../orbtk_utils", version = "0.3.1-alpha4" }
orbtk_render = { path = "../orbtk_render", version = "0.3.1-alpha4", default-features = false }
orbtk_shell_old = { path = "../orbtk_shell_old", version = "0.3.1-alpha4", default-features = false }
orbtk_theming = { path = "../orbtk_theming", version = "0.3.1-alpha4" }
raw-window-handle = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
threadpool = "1.8"

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"

[features]
default = ["orbtk_shell_old/orbraq"]
orbraq = ["orbtk_shell_old/orbraq"]
debug = []
