[package]
name = "orbtk_base"
version = "0.4.0-alpha1"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Base crate of OrbTk with all mandatory stuff."
edition = "2018"
keywords = ["gui", "ui", "ecs"]

[dependencies]
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }
ron = "0.6.4"
serde = "1.0.123"
serde_derive = "1.0.123"
lexical-core = "0.7.4"
phf = { version = "0.8.0", default-features = false }
raw-window-handle = "0.3"

[build-dependencies]
phf_codegen = { version = "0.8.0", default-features = false }