[package]
name = "orbtk_orbclient"
version = "0.4.0-alpha1"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "App and window implementation for OrbTk based on OrbClient."
edition = "2018"
keywords = ["gui", "ui", "ecs"]

[dependencies]
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }