[package]
name = "orbtk_render"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "2D Render library use by OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["2D", "render", "canvas"]
edition = "2018"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.23",  default-features = false, features = ["ico"] }
raqote = { version = "0.8.0", default-features = false }
rusttype = { version = "0.9.2" }
smallvec = "1"

[dependencies]
orbtk_utils = { path = "../orbtk_utils", version = "0.3.1-alpha4" }

