[package]
name = "orbtk_tinyskia"
version = "0.4.0-alpha1"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "2D software renderer use by OrbTk based on tiny_skia."
edition = "2018"
keywords = ["gui", "ui", "ecs"]

[dependencies]
orbtk_base = { version = "0.4.0-alpha1", path = "../orbtk_base" }
tiny-skia = { git = "https://github.com/RazrFalcon/tiny-skia.git" }
rusttype = "0.9.2"
image = "0.23.13"
smallvec = "1.6.1"