[package]
name = "orbtk_widgets"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Base OrbTk widget library."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ui", "widgets"]
edition = "2018"

[dependencies]
rust_decimal = "1.10.2"
lazy_static = "1.4.0"

# orbtk
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }
orbtk_api = { path = "../orbtk_api", version = "0.3.1-alpha4" }
orbtk_shell_old = { path = "../orbtk_shell_old", version = "0.3.1-alpha4", default-features = false }
orbtk_render = { path = "../orbtk_render", version = "0.3.1-alpha4", default-features = false }
orbtk_utils = { path = "../orbtk_utils", version = "0.3.1-alpha4" }
orbtk_proc_macros = { version = "0.3.1-alpha4", path = "../orbtk_proc_macros" }

[features]
default = []